--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1>안녕하세요</h1>
   <h1>node.js</h1>
+  <h1>깃허브와 헤로쿠 연동 배포</h1>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
